padding right solved overlap

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -137,7 +137,7 @@ section{
 .nav-link-header li a:link,
 .nav-link-header li a:visited
 {
-    padding: 0 10px 10px 10px;
+    padding: 0 10px 10px 0;
     border-bottom: 2px solid transparent;
     -webkit-transition: border-bottom 0.3s;
     transition: border-bottom 0.3s;
@@ -165,7 +165,7 @@ section{
 {
     margin-top: 0;
     color: #555;
-    padding: 0 10px 10px 10px;
+    padding: 0 10px 10px 0px;
 } 
 
 /*----------------------------------------*/
